--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ x-airflow-common:
   volumes:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
+    - ./data/incoming:/opt/airflow/incoming   # for listener directory
     - ./requirements.txt:/opt/airflow/requirements.txt
     # - ./plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID}:0"
