--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ x-airflow-common:
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./data/incoming:/opt/airflow/incoming   # for listener directory
+    - ./data/processed:/opt/airflow/processed   # for processed files
     - ./requirements.txt:/opt/airflow/requirements.txt
     # - ./plugins:/opt/airflow/plugins
   user: "${AIRFLOW_UID}:0"
